--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -15,7 +15,7 @@
     </div>
     <div id="download">
         <h3>下载文件</h3>
-        <a href="/file/download?path=group1/M00/00/00/rBL7NlvnEA2AeQLYAAJQagPGo8I342.jpg">下载</a>
+        <a href="/file/download?path=group1/M00/00/00/rBL7NlvpV_mAYBGHAARGAHPQ7Ck069.doc">下载</a>
         <br>
     </div>
     <div id="delete">
